# Realtime-AI-Tutor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  plan.md  presstotalk.md  pttplan.md  spec.md
.github/workflows/: railway-deploy.yml
backend/: comprehensive_results.json  demo_report.html  detailed_results.json  eval_report.html  eval_results.json  improved_results.json  pyproject.toml  requirements.txt  single_test.json
backend/app/: config.py  main.py
backend/app/routes/: evals.py  realtime.py
backend/app/services/: eval_logging.py  openai_sessions.py  transcript_normalization.py
backend/tests/: test_eval_logging.py  test_evals.py  test_evals_integration.py  test_main.py  test_openai_sessions.py  test_realtime.py  test_transcript_normalization.py
docs/: architecture.md  decisions.md  latency-optimization.md  latency.md  limitations.md  submission.md  transcript-template.md
evals/: README.md  USAGE.md  __init__.py
evals/analyzers/: __init__.py  performance_analyzer.py  report_generator.py
evals/datasets/: __init__.py  example_conversations.json
evals/rubrics/: __init__.py  socratic_eval.py
evals/runners/: __init__.py  cli.py  scenario_runner.py
evals/runs/: backend_session_metrics.jsonl  client_eval_events.jsonl  openai_session_metrics.jsonl  scenario_complete.jsonl  scenario_start.jsonl  turn_complete.jsonl  (+4 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
plans/: heygen-integration-plan.md
scripts/: demo-evals.py  run-evals.py  test-summary.sh  validate-ci.sh  view-scenarios.py
(+23 files in other folders)
