[project]
name = "live-ai-video-tutor-backend"
version = "0.1.0"
description = "FastAPI backend for the live AI video tutor"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "httpx>=0.28.0",
  "python-dotenv>=1.1.0",
  "pydantic>=2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
